crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_Cannot_override_a_me…_(338615109711a91b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - Cannot override a method decorated with `@final`
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import final, Callable, TypeVar
  2 | 
  3 | def lossy_decorator(fn: Callable) -> Callable: ...
  4 | 
  5 | class Parent:
  6 |     @final
  7 |     def foo(self): ...
  8 |     @final
  9 |     @property
 10 |     def my_property1(self) -> int: ...
 11 |     @property
 12 |     @final
 13 |     def my_property2(self) -> int: ...
 14 |     @property
 15 |     @final
 16 |     def my_property3(self) -> int: ...
 17 |     @final
 18 |     @classmethod
 19 |     def class_method1(cls) -> int: ...
 20 |     @classmethod
 21 |     @final
 22 |     def class_method2(cls) -> int: ...
 23 |     @final
 24 |     @staticmethod
 25 |     def static_method1() -> int: ...
 26 |     @staticmethod
 27 |     @final
 28 |     def static_method2() -> int: ...
 29 |     @lossy_decorator
 30 |     @final
 31 |     def decorated_1(self): ...
 32 |     @final
 33 |     @lossy_decorator
 34 |     def decorated_2(self): ...
 35 | 
 36 | class Child(Parent):
 37 |     # explicitly test the concise diagnostic message,
 38 |     # which is different to the verbose diagnostic summary message:
 39 |     #
 40 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
 41 |     def foo(self): ...
 42 |     @property
 43 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
 44 |     @property
 45 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
 46 |     @my_property2.setter
 47 |     def my_property2(self, x: int) -> None: ...
 48 |     @property
 49 |     def my_property3(self) -> int: ...  # error: [override-of-final-method]
 50 |     @my_property3.deleter
 51 |     def my_proeprty3(self) -> None: ...
 52 |     @classmethod
 53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
 54 |     @staticmethod
 55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
 56 |     @classmethod
 57 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
 58 |     @staticmethod
 59 |     def static_method2() -> int: ...  # error: [override-of-final-method]
 60 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
 61 |     @lossy_decorator
 62 |     def decorated_2(self): ...  # TODO: should emit [override-of-final-method]
 63 | 
 64 | class OtherChild(Parent): ...
 65 | 
 66 | class Grandchild(OtherChild):
 67 |     # TODO: The Liskov violation here maybe shouldn't be emitted? Whether called on the
 68 |     # type or on an instance, it will behave the same from the caller's perspective. The only
 69 |     # difference is whether the method body gets access to `self`, which is not a
 70 |     # concern of Liskov.
 71 |     @staticmethod
 72 |     # error: [override-of-final-method]
 73 |     # error: [invalid-method-override]
 74 |     def foo(): ...
 75 |     @property
 76 |     # TODO: we should emit a Liskov violation here too
 77 |     # error: [override-of-final-method]
 78 |     def my_property1(self) -> str: ...
 79 |     # TODO: we should emit a Liskov violation here too
 80 |     # error: [override-of-final-method]
 81 |     class_method1 = None
 82 | 
 83 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
 84 | 
 85 | T = TypeVar("T")
 86 | 
 87 | def identity(x: T) -> T: ...
 88 | 
 89 | class Foo:
 90 |     @final
 91 |     @identity
 92 |     @identity
 93 |     @identity
 94 |     @identity
 95 |     @identity
 96 |     @identity
 97 |     @identity
 98 |     @identity
 99 |     @identity
100 |     @identity
101 |     @identity
102 |     @identity
103 |     @identity
104 |     @identity
105 |     @identity
106 |     @identity
107 |     @identity
108 |     @identity
109 |     def bar(self): ...
110 | 
111 | class Baz(Foo):
112 |     def bar(self): ...  # error: [override-of-final-method]
```

# Diagnostics

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:41:9
   |
39 |     #
40 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
41 |     def foo(self): ...
   |         ^^^ Overrides a definition from superclass `Parent`
42 |     @property
43 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:6:5
  |
5 | class Parent:
6 |     @final
  |     ------
7 |     def foo(self): ...
  |         --- `Parent.foo` defined here
8 |     @final
9 |     @property
  |
help: Remove the override of `foo`
info: rule `override-of-final-method` is enabled by default
38 |     # which is different to the verbose diagnostic summary message:
39 |     #
40 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
   -     def foo(self): ...
41 +     
42 |     @property
43 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
44 |     @property
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:43:9
   |
41 |     def foo(self): ...
42 |     @property
43 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
44 |     @property
45 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:8:5
   |
 6 |     @final
 7 |     def foo(self): ...
 8 |     @final
   |     ------
 9 |     @property
10 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
11 |     @property
12 |     @final
   |
help: Remove the override of `my_property1`
info: rule `override-of-final-method` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Parent.my_property2`
  --> src/mdtest_snippet.pyi:45:9
   |
43 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
44 |     @property
45 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
46 |     @my_property2.setter
47 |     def my_property2(self, x: int) -> None: ...
   |
info: `Parent.my_property2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:12:5
   |
10 |     def my_property1(self) -> int: ...
11 |     @property
12 |     @final
   |     ------
13 |     def my_property2(self) -> int: ...
   |         ------------ `Parent.my_property2` defined here
14 |     @property
15 |     @final
   |
help: Remove the getter and setter for `my_property2`
info: rule `override-of-final-method` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Parent.my_property3`
  --> src/mdtest_snippet.pyi:49:9
   |
47 |     def my_property2(self, x: int) -> None: ...
48 |     @property
49 |     def my_property3(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
50 |     @my_property3.deleter
51 |     def my_proeprty3(self) -> None: ...
   |
info: `Parent.my_property3` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:15:5
   |
13 |     def my_property2(self) -> int: ...
14 |     @property
15 |     @final
   |     ------
16 |     def my_property3(self) -> int: ...
   |         ------------ `Parent.my_property3` defined here
17 |     @final
18 |     @classmethod
   |
help: Remove the override of `my_property3`
info: rule `override-of-final-method` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:53:9
   |
51 |     def my_proeprty3(self) -> None: ...
52 |     @classmethod
53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
54 |     @staticmethod
55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:17:5
   |
15 |     @final
16 |     def my_property3(self) -> int: ...
17 |     @final
   |     ------
18 |     @classmethod
19 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
20 |     @classmethod
21 |     @final
   |
help: Remove the override of `class_method1`
info: rule `override-of-final-method` is enabled by default
49 |     def my_property3(self) -> int: ...  # error: [override-of-final-method]
50 |     @my_property3.deleter
51 |     def my_proeprty3(self) -> None: ...
   -     @classmethod
   -     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
52 +       # error: [override-of-final-method]
53 |     @staticmethod
54 |     def static_method1() -> int: ...  # error: [override-of-final-method]
55 |     @classmethod
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method1`
  --> src/mdtest_snippet.pyi:55:9
   |
53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
54 |     @staticmethod
55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
56 |     @classmethod
57 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.static_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:23:5
   |
21 |     @final
22 |     def class_method2(cls) -> int: ...
23 |     @final
   |     ------
24 |     @staticmethod
25 |     def static_method1() -> int: ...
   |         -------------- `Parent.static_method1` defined here
26 |     @staticmethod
27 |     @final
   |
help: Remove the override of `static_method1`
info: rule `override-of-final-method` is enabled by default
51 |     def my_proeprty3(self) -> None: ...
52 |     @classmethod
53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
   -     @staticmethod
   -     def static_method1() -> int: ...  # error: [override-of-final-method]
54 +       # error: [override-of-final-method]
55 |     @classmethod
56 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
57 |     @staticmethod
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.class_method2`
  --> src/mdtest_snippet.pyi:57:9
   |
55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
56 |     @classmethod
57 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
58 |     @staticmethod
59 |     def static_method2() -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.class_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:21:5
   |
19 |     def class_method1(cls) -> int: ...
20 |     @classmethod
21 |     @final
   |     ------
22 |     def class_method2(cls) -> int: ...
   |         ------------- `Parent.class_method2` defined here
23 |     @final
24 |     @staticmethod
   |
help: Remove the override of `class_method2`
info: rule `override-of-final-method` is enabled by default
53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
54 |     @staticmethod
55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   -     @classmethod
   -     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
56 +       # error: [override-of-final-method]
57 |     @staticmethod
58 |     def static_method2() -> int: ...  # error: [override-of-final-method]
59 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method2`
  --> src/mdtest_snippet.pyi:59:9
   |
57 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
58 |     @staticmethod
59 |     def static_method2() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
60 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
61 |     @lossy_decorator
   |
info: `Parent.static_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:27:5
   |
25 |     def static_method1() -> int: ...
26 |     @staticmethod
27 |     @final
   |     ------
28 |     def static_method2() -> int: ...
   |         -------------- `Parent.static_method2` defined here
29 |     @lossy_decorator
30 |     @final
   |
help: Remove the override of `static_method2`
info: rule `override-of-final-method` is enabled by default
55 |     def static_method1() -> int: ...  # error: [override-of-final-method]
56 |     @classmethod
57 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   -     @staticmethod
   -     def static_method2() -> int: ...  # error: [override-of-final-method]
58 +       # error: [override-of-final-method]
59 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
60 |     @lossy_decorator
61 |     def decorated_2(self): ...  # TODO: should emit [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-method-override]: Invalid override of method `foo`
  --> src/mdtest_snippet.pyi:74:9
   |
72 |     # error: [override-of-final-method]
73 |     # error: [invalid-method-override]
74 |     def foo(): ...
   |         ^^^^^ Definition is incompatible with `Parent.foo`
75 |     @property
76 |     # TODO: we should emit a Liskov violation here too
   |
  ::: src/mdtest_snippet.pyi:7:9
   |
 5 | class Parent:
 6 |     @final
 7 |     def foo(self): ...
   |         --------- `Parent.foo` defined here
 8 |     @final
 9 |     @property
   |
info: `Grandchild.foo` is a staticmethod but `Parent.foo` is an instance method
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:74:9
   |
72 |     # error: [override-of-final-method]
73 |     # error: [invalid-method-override]
74 |     def foo(): ...
   |         ^^^ Overrides a definition from superclass `Parent`
75 |     @property
76 |     # TODO: we should emit a Liskov violation here too
   |
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:6:5
  |
5 | class Parent:
6 |     @final
  |     ------
7 |     def foo(self): ...
  |         --- `Parent.foo` defined here
8 |     @final
9 |     @property
  |
help: Remove the override of `foo`
info: rule `override-of-final-method` is enabled by default
68 |     # type or on an instance, it will behave the same from the caller's perspective. The only
69 |     # difference is whether the method body gets access to `self`, which is not a
70 |     # concern of Liskov.
   -     @staticmethod
   -     # error: [override-of-final-method]
   -     # error: [invalid-method-override]
   -     def foo(): ...
71 +     
72 |     @property
73 |     # TODO: we should emit a Liskov violation here too
74 |     # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:78:9
   |
76 |     # TODO: we should emit a Liskov violation here too
77 |     # error: [override-of-final-method]
78 |     def my_property1(self) -> str: ...
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
79 |     # TODO: we should emit a Liskov violation here too
80 |     # error: [override-of-final-method]
   |
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:8:5
   |
 6 |     @final
 7 |     def foo(self): ...
 8 |     @final
   |     ------
 9 |     @property
10 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
11 |     @property
12 |     @final
   |
help: Remove the override of `my_property1`
info: rule `override-of-final-method` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:81:5
   |
79 |     # TODO: we should emit a Liskov violation here too
80 |     # error: [override-of-final-method]
81 |     class_method1 = None
   |     ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
82 |
83 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
   |
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:17:5
   |
15 |     @final
16 |     def my_property3(self) -> int: ...
17 |     @final
   |     ------
18 |     @classmethod
19 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
20 |     @classmethod
21 |     @final
   |
help: Remove the override of `class_method1`
info: rule `override-of-final-method` is enabled by default

```

```
error[override-of-final-method]: Cannot override `Foo.bar`
   --> src/mdtest_snippet.pyi:112:9
    |
111 | class Baz(Foo):
112 |     def bar(self): ...  # error: [override-of-final-method]
    |         ^^^ Overrides a definition from superclass `Foo`
    |
info: `Foo.bar` is decorated with `@final`, forbidding overrides
   --> src/mdtest_snippet.pyi:90:5
    |
 89 | class Foo:
 90 |     @final
    |     ------
 91 |     @identity
 92 |     @identity
    |
   ::: src/mdtest_snippet.pyi:109:9
    |
107 |     @identity
108 |     @identity
109 |     def bar(self): ...
    |         --- `Foo.bar` defined here
110 |
111 | class Baz(Foo):
    |
help: Remove the override of `bar`
info: rule `override-of-final-method` is enabled by default
109 |     def bar(self): ...
110 | 
111 | class Baz(Foo):
    -     def bar(self): ...  # error: [override-of-final-method]
112 +     pass  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```
